--- a/thankyou.html
+++ b/thankyou.html
@@ -56,12 +56,20 @@
           opacity: 0;
         }
       }
+
+      /* UKRYWAMY GIF NA START */
+      #gif-container {
+        display: none;
+        text-align: center;
+        margin-top: 10px;
+      }
     </style>
   </head>
 
   <body>
     <div id="thankyou"><b>Dzięki mała &lt;3</b></div>
 
+    <!-- PIERWSZY OBRAZEK (ZMIKNIE PO KLIKNIĘCIU) -->
     <img
       height="300px"
       id="rizz"
@@ -69,6 +77,19 @@
       alt="rizzler god"
       class="responsive"
     />
+
+    <!-- DRUGI OBRAZEK (GIF) – POJAWI SIĘ W MIEJSCU STAREGO -->
+    <div id="gif-container">
+      <a id="gif-link" href="#" target="_blank">
+        <img
+          height="300px"
+          id="gif-image"
+          src=""
+          alt="gif"
+          class="responsive"
+        />
+      </a>
+    </div>
 
     <div id="audio-container">
       <audio id="myAudio" loop>
@@ -84,7 +105,6 @@
       Klikaj dalej to nie koniec.
     </button>
 
-    <!-- MIEJSCE NA LATAJĄCE SERDUSZKA -->
     <div id="heart-container"></div>
 
     <script>
@@ -92,29 +112,28 @@
       const btn = document.getElementById("playBtn");
       const container = document.getElementById("heart-container");
 
+      const firstImage = document.getElementById("rizz");
+      const gifContainer = document.getElementById("gif-container");
+      const gifImage = document.getElementById("gif-image");
+      const gifLink = document.getElementById("gif-link");
+
       const hearts = ["💗","💕","💓","💖","💘","💞"];
 
       function createHeart() {
         const heart = document.createElement("div");
         heart.classList.add("heart");
 
-        // Losowe serduszko
         heart.innerText = hearts[Math.floor(Math.random() * hearts.length)];
-
-        // Losowa pozycja startowa
         heart.style.left = Math.random() * 100 + "vw";
 
-        // Losowy rozmiar
-        const size = Math.random() * 20 + 20; // 20px - 40px
+        const size = Math.random() * 20 + 20;
         heart.style.fontSize = size + "px";
 
-        // Losowa prędkość
-        const duration = Math.random() * 4 + 3; // 3-7 sekund
+        const duration = Math.random() * 4 + 3;
         heart.style.animationDuration = duration + "s";
 
         container.appendChild(heart);
 
-        // Usuwamy serduszko po animacji, żeby nie zapchać strony
         setTimeout(() => {
           heart.remove();
         }, duration * 1000);
@@ -124,17 +143,25 @@
         audio.play();
         btn.style.display = "none";
 
-        // ⭐ PODMIANA GIFA PO KLIKNIĘCIU
-        document.getElementById("rizz").src = "cat GIF.gif";
+        // ❗ NAJWAŻNIEJSZE ZMIANY ❗
+        firstImage.style.display = "none";   // ← ZNIKA STARY OBRAZEK
+        gifContainer.style.display = "block"; // ← POJAWIA SIĘ NOWY GIF
 
-        // Tworzymy nowe serduszka co 300ms
+        // TWÓJ GIF (JEST TEŻ LINKIEM)
+        const gifURL = "https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExN2hlMXY5cHUwZnJneWNxbHVqdXd3eHM2aXdhM3htbmQ0aHc4M3VpMSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/uwxi8XqnwmEl8Tov2W/giphy.gif";
+
+        gifImage.src = gifURL;
+        gifLink.href = gifURL;
+
         setInterval(createHeart, 300);
       });
     </script>
+
     <iframe
-  src="music.html"
-  style="position:fixed; bottom:0; left:0; width:0; height:0; border:none; visibility:hidden;">
-</iframe>
+      src="music.html"
+      style="position:fixed; bottom:0; left:0; width:0; height:0; border:none; visibility:hidden;">
+    </iframe>
 
   </body>
 </html>
+
